Ajuste final final
